# openrgb-rs2

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: clippy.yml  coverage.yml  doc.yml  release.yml  tests.yml  warnings.yml
examples/: color.rs  command.rs  command_group.rs  controllers.rs  leds.rs  segment.rs  zone.rs
src/: error.rs  lib.rs
src/client/: command.rs  controller.rs  group.rs  led.rs  mod.rs  mode.rs  segment.rs  zone.rs
src/client/plugin/: mod.rs
src/protocol/: deserialize.rs  mod.rs  serialize.rs  stream.rs
src/protocol/data/: color.rs  mod.rs
src/protocol/data/implement/: array.rs  slice.rs  string.rs
src/protocol/data/openrgb/: controller.rs  led.rs  mode.rs  segment.rs  zone.rs
src/protocol/data/openrgb/plugin/: effect.rs  mod.rs
