[package]
name = "openrgb2"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = [
    "Julien Nicoulaud <julien.nicoulaud@gmail.com>",
    "Arthur de Groot <arthurdegroot99@gmail.com>",
]
description = "OpenRGB SDK client, successor to openrgb"
documentation = "https://docs.rs/openrgb2"
homepage = "https://github.com/Achtuur/openrgb-rs2"
repository = "https://github.com/Achtuur/openrgb-rs2"
readme = "README.md"
license = "GPL-2.0"
keywords = ["RGB", "LED", "gaming"]
categories = ["network-programming", "game-development"]
exclude = [".github/*", ".run/*"]

[dependencies]
array2d = "0.3.2"
delegate = "0.13.4"
flagset = "0.4.7"
rgb = "0.8.52"
thiserror = "2.0.16"
tokio = { version = "1.46.1", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }
tracing = "0.1.41"

[dev-dependencies]
log = "0.4.27"
simplelog = "0.12.2"
tokio-test = "0.4.4"
tokio = { version = "1.46.1", default-features = false, features = ["macros"] }
tracing-test = "0.2.5"


[lints.clippy]
allow_attributes_without_reason = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
deref_by_slicing = "warn"
derive_partial_eq_without_eq = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_struct_with_brackets = "warn"
equatable_if_let = "warn"
error_impl_error = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_collect = "warn"
format_push_str = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
# iter_on_empty_collections = "warn" # nursery
large_future = "warn"
large_stack_arrays = "deny"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
needless_collect = "warn"
or_fun_call = "warn"
path_push_buf_overwrite = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
